make code java 8 compatible